# netwatch

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  netwatch-start.sh  netwatch.py  netwatch_crowdsec.py  pyproject.toml  replay.py
.github/: FUNDING.yml
.github/workflows/: docker.yml  publish.yml
docs/: DROP4_TUI_REPLAY_PLAN.md  PRICING.md  ROADMAP.md
tests/: test_app_state.py  test_autoblock.py  test_cloudflared.py  test_crowdsec.py  test_doctor.py  test_live_pty.py  test_mesh.py  test_path_hardening.py  test_recon_split.py  test_refactor_v2.py  test_replay.py  test_tarpit.py  test_tui_dispatch.py  test_tui_replay.py  test_web_ui.py
tools/: http_replay_to_gif.py  replay_to_gif.py  synth_ftp_session.py
